[package]
name = "ndarray_benchmark"
version = "0.1.0"
authors = ["daries100 <daries100@gmail.com>"]

[dependencies]
ndarray = { version="0.11.2", features = ["blas"] }
blas-src = { version = "0.1.2", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.5.6", default-features = false, features = ["cblas", "system"] }
rand = "0.4.2"


[dev-dependencies]
criterion = "0.2.2"

[[bench]]
name = "bench_main"
harness = false